more java17 compat